compiler/testData/diagnostics/tests/typealias/recursive.kt
typealias A = <!RECURSIVE_TYPEALIAS_EXPANSION!>B<!>
typealias B = <!RECURSIVE_TYPEALIAS_EXPANSION!>A<!>

val x: <!RECURSIVE_TYPEALIAS_EXPANSION!>A<!> = TODO()